[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "navautomation"
version = "0.1.0"
description = "Nava automation client library"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [ { name = "Your Name", email = "you@example.com" } ]
dependencies = [
  "requests>=2.28"
]

[project.urls]
"Source" = "https://github.com/YOUR_USERNAME/navautomation"
